--- a/Common/src/main/resources/META-INF/mods.toml
+++ b/Common/src/main/resources/META-INF/mods.toml
@@ -1,14 +1,14 @@
 modLoader="javafml"
 loaderVersion="*"
 license="All rights reserved"
-issueTrackerURL="https://github.com/ricksouth/serilum-mc-mods/labels/Mod:%20Better%20Beacon%20Placement"
+issueTrackerURL="https://github.com/Serilum/.issue-tracker/labels/Mod:%20Better%20Beacon%20Placement"
 logoFile="icon.png"
 
 [[mods]]
 modId="betterbeaconplacement"
-version="3.2"
+version="3.3"
 displayName="Better Beacon Placement"
-displayURL="https://curseforge.com/minecraft/mc-mods/better-beacon-placement"
+displayURL="https://serilum.com/mod/better-beacon-placement"
 authors="Rick South"
 description='''Easily place beacon bases by right-clicking the beacon with a mineral block plus other tweaks.
 '''
@@ -21,13 +21,15 @@ If you would like to contribute too, check out https://ricksouth.com/donate. App
 
 [[dependencies.betterbeaconplacement]]
     modId="collective"
+    type="required"
     mandatory=true
-    versionRange="[7.3,)"
+    versionRange="[7.21,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.betterbeaconplacement]]
     modId="minecraft"
+    type="required"
     mandatory=true
     versionRange="[1.20.2]"
     ordering="NONE"
