--- a/Common/src/main/resources/META-INF/neoforge.mods.toml
+++ b/Common/src/main/resources/META-INF/neoforge.mods.toml
@@ -6,7 +6,7 @@ logoFile="icon.png"
 
 [[mods]]
 modId="betterbeaconplacement"
-version="3.3"
+version="3.4"
 displayName="Better Beacon Placement"
 displayURL="https://serilum.com/mod/better-beacon-placement"
 authors="Rick South"
@@ -14,7 +14,7 @@ description='''Easily place beacon bases by right-clicking the beacon with a min
 '''
 credits='''Thank you very much to my Membership sponsors for supporting the development of this mod:  
 
-Alister, Andrean Olgo, aternosorg, BirdieMiner, Cherriesaurus, Jack, Jeremy Langford, Michael W. S., pepe1191, Shana Gitnick, Tyler Behl   
+Alister, Andrean Olgo, aternosorg, Cherriesaurus, Michael W. S., Nahuel Fernandez, Shana Gitnick, Tyler Behl   
 
 If you would like to contribute too, check out https://serilum.com/donate. Appreciate it! <3   
 '''
@@ -22,7 +22,7 @@ If you would like to contribute too, check out https://serilum.com/donate. Appre
 [[dependencies.betterbeaconplacement]]
     modId="collective"
     type="required"
-    versionRange="[7.55,)"
+    versionRange="[7.78,)"
     ordering="NONE"
     side="BOTH"
 
